--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div>
-        <h1>Search for a user's repositories </h1>
+        <h1>Search for a user's GitHub repositories </h1>
         <section class="form-section">
             <form>
                 <input type="text" placeholder="Search..">
